--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNnYsE/BN8n3f2UnvXZvBVL",
+      "authorship_tag": "ABX9TyMaoVBT4gMCfZyOGtcwmqyv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,9 @@
         "\n",
         "アイデアは、サクサクっと python を学ぶための colab ノートブックを作る。\n",
         "\n",
-        "とりあえず kaggle と chainer と functional とかを材料に書き始めてみる。 数学と違って、定義や証明ではなく、問題-解答ペアで進む予定。 \n",
+        "とりあえず kaggle と chainer と functional とかを材料に書き始めてみる。 \n",
+        "\n",
+        "数学と違って、定義や証明ではなく、問題-解答ペアで進む予定。 \n",
         "\n"
       ]
     },
@@ -484,7 +486,7 @@
         "print(hex(0b100000000))\n",
         "print(hex(-101))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +540,7 @@
         "print(toStr(101,2))\n",
         "print(toStr(101,8))\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,7 +700,7 @@
       "source": [
         "bin(100)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4640,15 +4642,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LZKUpBZuMyVR"
-      },
-      "source": [
-        "# ここから kaggle06string.ipynb"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "QLvWXHtzM5qg"
       },
       "source": [
@@ -6111,7 +6104,7 @@
         "print (len(\"\"\"hey\"\"\")) #=> 3\n",
         "print (len('\\n')) #=> 1"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6162,7 +6155,7 @@
         "print (is_valid_zip(\"123456\"))\n",
         "print (is_valid_zip(\"\"))\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6226,7 +6219,7 @@
         "print(word_search(doc_list, 'casinoville'))\n",
         "print(word_search(doc_list, 'they'))\n"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6285,7 +6278,7 @@
         "\n",
         "multi_word_search(doc_list, keywords)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6703,7 +6696,7 @@
         "print(\"it contains names such as...\",\n",
         "      dir(numpy.random)[-15:] )"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6825,7 +6818,7 @@
       "source": [
         "# print(dir(rolls))"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6978,16 +6971,7 @@
         "\n",
         "`list` のデザイナーはリストに数値を足すのは駄目、と決めたが、`numpy`のデザイナーは `array` に数値を足すのは、あり、と考えた。\n",
         "\n",
-        "`numpy` の `array` でいくつかの python の演算子が意外な(少なくとも `list` と違った)ふるまいをするかを示す。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "e1BlFSGhpj4k"
-      },
-      "source": [
-        "# いまここ"
+        "`numpy` の `array` でいくつかの python の演算子が意外な (少なくとも `list` と違った) ふるまいをするかを示す。\n"
       ]
     },
     {
@@ -7029,7 +7013,8 @@
         "id": "VEDOxLzgI85x"
       },
       "source": [
-        "### 2次元アレイを作る\n"
+        "---\n",
+        "2 次元アレイを作る\n"
       ]
     },
     {
@@ -7037,18 +7022,20 @@
       "metadata": {
         "id": "hQ481AdoiH8O",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 84
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "efb1b544-955a-455a-ae35-06c74d79dfe1"
+        "outputId": "5262a1a0-33ba-45c1-d9ab-dc908efe7238"
       },
       "source": [
+        "import numpy\n",
         "xlist = [[1,2,3],[2,4,6],]\n",
         "# Create a 2-dimensional array\n",
         "x = numpy.asarray(xlist)\n",
-        "print(\"xlist = {}\\nx =\\n{}\".format(xlist, x))"
+        "print(\"xlist = {}\\nx =\\n{}\".format(xlist, x))\n",
+        "print(type(xlist))\n",
+        "print(type(x))"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -7056,7 +7043,9 @@
             "xlist = [[1, 2, 3], [2, 4, 6]]\n",
             "x =\n",
             "[[1 2 3]\n",
-            " [2 4 6]]\n"
+            " [2 4 6]]\n",
+            "<class 'list'>\n",
+            "<class 'numpy.ndarray'>\n"
           ],
           "name": "stdout"
         }
@@ -7067,16 +7056,15 @@
       "metadata": {
         "id": "kR56eDFKI_pT",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "940c06e5-a662-49f2-a934-660e1fb58236"
+        "outputId": "afc4b6b5-dd1f-4445-c6a1-6512ad224b30"
       },
       "source": [
         "# Get the last element of the second row of our numpy array\n",
         "x[1,-1]"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7088,7 +7076,35 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "km1vBdEyV-lI",
+        "outputId": "83f4ed80-f0d3-46d8-b17d-f45dbc70a8d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x[1][-1]"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     },
@@ -7113,7 +7129,48 @@
         "```\n",
         "TypeError: list indices must be integers or slices, not tuple\n",
         "```\n",
-        "numpy's ndarray type is specialized for working with multi-dimensional data, so it defines its own logic for indexing, allowing us to index by a tuple to specify the index at each dimension."
+        "numpy の `ndarray` は n-dimensional array ということで $n$ 次元のデータ処理のためのデータ型で、タプルによる indexing ができるようになっている。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lpG8iqmFY7IZ",
+        "outputId": "9ecf83ea-5b9f-4b91-ff96-c1076163dd10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "import numpy as np\n",
+        "xlist = [[1,2,3],[2,4,6],]\n",
+        "print(type(np.asarray(xlist)))\n",
+        "print(type(np.array(xlist)))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'numpy.ndarray'>\n",
+            "<class 'numpy.ndarray'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8YOYBXbQaerd"
+      },
+      "source": [
+        "上記の実験では同じ結果になっているが、help() を取ってみると\n",
+        "\n",
+        "`np.asarray()` は convert input to an array で \n",
+        "\n",
+        "`np.array` は create an array らしい。 使い方も違う。\n"
       ]
     },
     {
@@ -7122,9 +7179,12 @@
         "id": "ovlzZ9ETkMld"
       },
       "source": [
-        "###  When does 1 + 1 not equal 2?\n",
+        "---\n",
+        "`tesorflow` での演算子オーバーロード\n",
         "\n",
-        "ディープラーニングで広く使われる`tensorflow`というライブラリーがある。`tensorflow`では演算子オーバーロードを広範囲に使う。"
+        "ディープラーニングで広く使われる `tensorflow` というライブラリーがある。 \n",
+        "\n",
+        "`tensorflow` では演算子オーバーロードを広範囲に使う。"
       ]
     },
     {
@@ -7178,7 +7238,7 @@
         "\n",
         "ということでなに言っているかわからなくても、大事なのはかならずしも明確でなく、魔法のようなやりかたで演算子オーバーロードが行われることがある、ということを理解しておくことだ。\n",
         "\n",
-        "python  の演算子が`int`、`string`、`list`でどう働くかを理解していてもそれが`tensorflow Tensor`、`numpy ndarray`、`pandas Dataframe`でどういう意味かをそのままでわかったことにはならないが、すこし`DataFrame`をかじるとたとえば次のような式がどのような意味かが、本能的にわかり始める。"
+        "python  の演算子が `int`、`string`、`list` でどう働くかを理解していてもそれが `tensorflow Tensor`、`numpy ndarray`、`pandas Dataframe` でどういう意味かをそのままでわかったことにはならないが、すこし `DataFrame` をかじるとたとえば次のような式がどのような意味かが、本能的にわかり始める。"
       ]
     },
     {
@@ -7199,11 +7259,20 @@
         "id": "vxkqvXGUJMPI"
       },
       "source": [
-        "しかし、どうやってこれができているのか。上の例は5つほどの違った演算子オーバーロードが使われているが、それぞれなにをやっているのか。なにか間違ったときにこの辺を理解しておくと役に立つ。\n",
+        "しかし、どうやってこれができているのか。上の例は 5 つほどの違った演算子オーバーロードが使われているが、それぞれなにをやっているのか。なにか間違ったときにこの辺を理解しておくと役に立つ。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sKQhX33qYLcB"
+      },
+      "source": [
+        "---\n",
+        "**演算子オーバーロードの仕組み**\n",
         "\n",
-        "### 演算子オーバーロードの仕組み\n",
-        "\n",
-        "`help()`や`dir()`を呼び出すと前後に2つずつアンダースコアがついた名前がたくさんでてくるのに気づいているだろうか。"
+        "`help()`や`dir()`を呼び出すと前後に2つずつアンダースコアがついた名前がたくさんでてくる。"
       ]
     },
     {
@@ -7212,7 +7281,7 @@
         "id": "NqqPHWEbJNvw"
       },
       "source": [
-        "print(dir(list))"
+        "# print(dir(list))"
       ],
       "execution_count": null,
       "outputs": []
@@ -7244,20 +7313,13 @@
       "source": [
         "これらが、演算子オーバーロードに直接関係している。\n",
         "\n",
-        "python  のプログラマーが自分の作った型に演算子を定義する際、まず `__lt__`、`__setattr__`、`__contains__`のような前後に2つずつアンダースコアがついた名前のメソッドを作る。このダブル・アンダースコア書式では python にとって一般に特殊な意味を持つ。\n",
+        "python  のプログラマーが自分の作った型に演算子を定義する際、まず `__lt__`、`__setattr__`、`__contains__`のような前後に2つずつアンダースコアがついた名前のメソッドを作る。\n",
         "\n",
-        "例えば、`[1, 2, 3]`が裏で`__contains__`を呼び出すとすると、それは`[1, 2, 3].__contains__(x)`としていることになる。\n",
+        "このダブル・アンダースコア書式は python にとって一般に特殊な意味を持つ。\n",
         "\n",
-        "この辺を興味があって学びたいならば python の公式ドキュメントにたくさんのアンダースコア・メソッドについて書いてある。このレッスンでは扱わない。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PiyXN2kfJQe3"
-      },
-      "source": [
-        "# 練習問題"
+        "例えば、`[1, 2, 3]` が裏で `__contains__` を呼び出すとすると、それは `[1, 2, 3].__contains__(x)` としていることになる。\n",
+        "\n",
+        "この辺を興味があって学びたいならば python の公式ドキュメントにたくさんのアンダースコア・メソッドについて書いてある。"
       ]
     },
     {
