--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNOTDXj11jfAXL07Ud7Jf2U",
+      "authorship_tag": "ABX9TyPsdLZzVUrJ/Yh3JQPbUYDo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8653,13 +8653,8 @@
         "id": "1blOPTbc7q7y"
       },
       "source": [
-        "## 2 点間を通る直線の傾き\n",
-        "\n",
-        "接線の傾きと微分の関係を調べるため、まずは2点を通る直線の傾きを求める問題を考える。\n",
-        "\n",
-        "**図表**\n",
-        "\n",
-        "![2点間を通る直線](https://github.com/chainer/tutorials/blob/master/ja/images/03/03_04.png?raw=1)\n",
+        "---\n",
+        "2 点間を通る直線の傾き\n",
         "\n",
         "直線の傾きは 「$y$ （縦方向）の増加量 / $x$ （横方向）の増加量」で計算できるので、上図の直線の傾き $a$ は、\n",
         "\n",
@@ -8676,10 +8671,10 @@
         "id": "3Th2z7b-7q7z"
       },
       "source": [
-        "## 接線の傾き\n",
+        "---\n",
+        "接線の傾き\n",
         "\n",
-        "上図での点 $x_1$ における接線の傾きを求めるために、もう一方の点 $x_2$ を $x_1$ に近づけていく。ただし、 $x_1$ と $x_2$ が完全に同じになってしまうと、$x$ 方向、 $y$ 方向の増加量がどちらも $0$ になってしまうため、傾きは $0/0$ で計算することができない。\n",
-        "そこで 2 点は異なる点でありつつ、 $x_2$ を限りなく $x_1$ に近づけていった時、直線の傾きがどのように振る舞うかを見る必要がある。これを数式的に表現するには、**極限**の考えが必要になる。\n",
+        "$x_2$ を限りなく $x_1$ に近づけていった時、直線の傾きがどのように振る舞うかを見る。これを数式的に表現するには、**極限**の考えが必要になる。\n",
         "\n",
         "極限では、変数がある値に限りなく近づくとき、その変数によって記述される関数がどのような値に近づくかを考える。\n",
         "関数 $f$ に対し、$h$ と言う変数を $a$ に近づけていったときの $f(h)$ が近づく値を $\\lim$ と言う記号を用いて\n",
@@ -8701,21 +8696,11 @@
         "\\displaystyle \\lim _{h\\rightarrow a} c h^n=c a^n\n",
         "$$\n",
         "\n",
-        "が成立する。これだけ見ると単に関数 $\\lim _{h\\rightarrow a} f(h)$ は $h$ に $a$ を代入した値 $f(a)$ のように思えるかも知れない。しかし、今考えている直線の傾きの場合、そのような代入操作を行うと先程のように $0/0$ の形が現れてしまうため、単純な代入では極限を求めることはできない。\n",
+        "が成立する。これだけ見ると単に関数 $\\displaystyle \\lim _{h\\rightarrow a} f(h)$ は $h$ に $a$ を代入した値 $f(a)$ のように思えるかも知れない。しかし、今考えている直線の傾きの場合、そのような代入操作を行うと先程のように $0/0$ の形が現れてしまうため、単純な代入では極限を求めることはできない。\n",
         "極限の計算方法は後ほど詳しく解説する。\n",
         "\n",
         "それでは、下図のある点 $x$ における接線の傾き $a$ を求めていこう。\n",
         "\n",
-        "**図表**\n",
-        "\n",
-        "![1点での接線](https://github.com/chainer/tutorials/blob/master/ja/images/03/03_05.png?raw=1)\n",
-        "\n",
-        "2点を通る直線の傾きの式と極限を組み合わせて、接線の傾きを求めることができる。\n",
-        "\n",
-        "\n",
-        "**図表**\n",
-        "\n",
-        "![1点での接線2](https://github.com/chainer/tutorials/blob/master/ja/images/03/03_06.png?raw=1)\n",
         "\n",
         "はじめに、 $x$ から $h$ だけ離れた点 $x + h$ を考え、2点を通る直線の傾きを求めてみる。\n",
         "次に $h$ を $0$ に限りなく近づけていけば、1点 $x$ で接する接線を考えることができる。\n",
@@ -8758,7 +8743,7 @@
         "id": "qh166PcP7q70"
       },
       "source": [
-        "## 微分の公式\n",
+        "# 微分の公式\n",
         "\n",
         "ある関数の導関数を計算するには、導関数の定義通りに計算するのが最も愚直な方法である．\n",
         "しかし、これから紹介する種々の公式を組み合わせることで、わざわざ定義に戻らなくても、複雑な関数の導関数を計算できる。\n",
