--- a/learnpython.ipynb
+++ b/learnpython.ipynb
@@ -6,7 +6,7 @@
       "name": "learnpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOD84EsZWXx+OCddhvbnmsv",
+      "authorship_tag": "ABX9TyO15K8J/PG0MmHXjaw1tYdx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7325,32 +7325,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Vj28JNeJpamN"
-      },
-      "source": [
-        "# python の数学"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gPdCfLMDQXDT"
-      },
-      "source": [
-        "* math モジュール\n",
-        "* numpy 高速数値計算\n",
-        "* sympy 数式処理システム\n",
-        "* 微分\n",
-        "* 線形代数\n",
-        "* 統計学\n",
-        "* pandas\n",
-        "* tensorflow\n",
-        "* pytorch\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "eiEvWDb1odxy"
       },
       "source": [
@@ -8652,7 +8626,7 @@
         "id": "q2VOU_NmBs9A"
       },
       "source": [
-        "# 関数型Python という考え方\n",
+        "# 関数型 python という考え方\n",
         "\n",
         "* reduce, map, filter を使う。  \n",
         "* iterator, generator を使う。  \n",
