--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOERALNd8DVyDwsTgx/J2Hf",
+      "authorship_tag": "ABX9TyPH27b9qA7U0tThLzXOsvWW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,7 +171,14 @@
         "---\n",
         "弧度法\n",
         "\n",
-        "半径 $r$ の円で、"
+        "半径 $r$ の円で、半径に等しい長さの弧 $\\mathrm{AB}$ に対する中心角の大きさは、半径 $r$ に関係なく一定である。 この角の大きさを 1 ラジアン (1 弧度) と言い、ラジアンを単位をする角の表し方を弧度法と言う。 直角を 90°とする角度の表し方を度数法と言う。\n",
+        "\n",
+        "* 1 ラジアン = $\\displaystyle \\left ( \\frac{180}{\\pi} \\right )^\\circ$\n",
+        "* 180°= $\\pi$ ラジアン\n",
+        "\n",
+        "* 弧の長さ $\\quad l = r \\theta$\n",
+        "* 面積 $\\quad S = \\frac 1 2 r^2 \\theta = \\frac 1 2 rl$\n",
+        "\n"
       ]
     }
   ]
