--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNiL250F6DlD6VMKDwTD+5q",
+      "authorship_tag": "ABX9TyPof+JUdXEMZOotsYJNjRVq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,43 +203,97 @@
       "cell_type": "code",
       "metadata": {
         "id": "pm9qtlyrnY_A",
-        "outputId": "3550d8fb-2301-42bb-bb0a-8b2e996010dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
-        }
+          "height": 126
+        },
+        "outputId": "b71b77f4-9cbe-417f-ce83-9563c1cefbae"
       },
       "source": [
         "from sympy import *\n",
         "display(Rational(72,180)*pi)\n",
         "display(Rational(-320,180)*pi)\n",
         "display(Rational(4,15)*180)\n",
-        "display(Rational(-13,4)*180)\n",
-        "print()\n",
-        "print(\"この長さ l = (4*150/180.as_integer_ratio()))"
+        "display(Rational(-13,4)*180)\n"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-e1c06fc1c534>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print(\"この長さ l = {} π\".format(4*150/180.as_integer_ratio()))\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{2 \\pi}{5}$",
+            "text/plain": [
+              "2*pi/5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{16 \\pi}{9}$",
+            "text/plain": [
+              "-16*pi/9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 48$",
+            "text/plain": [
+              "48"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle -585$",
+            "text/plain": [
+              "-585"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "coVUPwAonygW"
+        "id": "coVUPwAonygW",
+        "outputId": "1655ea95-5b67-434a-acb8-bdf5343a230f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "# 弧の長さは r theta なので\n",
+        "print(4 * 150/180)\n",
+        "# 面積は 1/2 r l なので\n",
+        "print(0.5*4* 4*150/180)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3.3333333333333335\n",
+            "6.666666666666667\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
