--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOh6CX2rIlEWtbs9FkA01sJ",
+      "authorship_tag": "ABX9TyN8q63tmFjpYNhqBQkU47a0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -352,12 +352,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "82uLVNsOxNT6",
-        "outputId": "051d636f-29b8-411a-fba2-b181db964524",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "82uLVNsOxNT6",
+        "outputId": "051d636f-29b8-411a-fba2-b181db964524"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -488,12 +488,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fRS69DBx0Hle",
-        "outputId": "00a6da8e-5d1a-4f6c-d2dc-237f985522f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 120
-        }
+        },
+        "id": "fRS69DBx0Hle",
+        "outputId": "00a6da8e-5d1a-4f6c-d2dc-237f985522f7"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -556,13 +556,87 @@
         "基本例題 111 p.171 (2)\n",
         "\n",
         "\n",
-        "$\\displaystyle \\frac 3 2 \\pi \\lt \\theta \\lt 2 \\pi$ とする。 $\\cos \\theta = \\displaystyle \\frac 5 {13}$ のとき、$\\sin \\theta$ と $\\tan \\theta$ を求める。\n"
+        "$\\displaystyle \\pi \\lt \\theta \\lt \\frac 3 2 \\pi$ とする。 $\\tan \\theta = 7$ のとき、$\\sin \\theta$ と $\\cos \\theta$ を求める。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5n-udean0qQN"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "5n-udean0qQN",
+        "outputId": "05b35153-52f9-4ce6-9e0a-86a13ed2d293"
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "# 与件 cos(theta) = 7\n",
+        "# 公式から cos(theta)**2 = 1/(1 + tan(theta)**2)\n",
+        "# 公式から sin(theta) = tan(theta) * cos(theta)\n",
+        "display(S(1) / (1 + 7**2)) # S(1) は 1 の実数表示 Rational(1,1)\n",
+        "display(sqrt(S(1) / (1 + 7**2))) # cos(theta)\n",
+        "display(S(7) * (-sqrt(2)/10))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{1}{50}$",
+            "text/plain": [
+              "1/50"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{\\sqrt{2}}{10}$",
+            "text/plain": [
+              "sqrt(2)/10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{7 \\sqrt{2}}{10}$",
+            "text/plain": [
+              "-7*sqrt(2)/10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yT9G6rKQ87Rc"
+      },
+      "source": [
+        "---\n",
+        "基本例題 112 p.172 (1)\n",
+        "\n",
+        "* 等式 $\\;\\; \\displaystyle \\frac {\\cos \\theta}{1 + \\sin \\theta} + \\tan \\theta = \\frac 1 {\\cos \\theta}$ を証明する。\n",
+        "\n",
+        "左辺 = $#"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EzoqBDbV-N5M"
       },
       "source": [
         ""
