--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMaRxEDwKFNNibtRnXTBYRH",
+      "authorship_tag": "ABX9TyMqdJ/lvJqX8j6MifeLnsUg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -693,7 +693,32 @@
         "\n",
         "の両辺を 2 乗すると\n",
         "\n",
-        "$\\sin\\theta +\\cos\\theta = \\displaystyle\\frac{\\sqrt 3}{2}$\n"
+        "$\\sin^2\\theta +\\cos^2\\theta + 2\\sin\\theta\\cos\\theta = \\displaystyle\\frac{3}{4}$\n",
+        "\n",
+        "$1 + 2\\sin\\theta\\cos\\theta = \\displaystyle\\frac{3}{4}$\n",
+        "\n",
+        "$2\\sin\\theta\\cos\\theta = \\displaystyle\\frac{3}{4} - 1$\n",
+        "\n",
+        "$2\\sin\\theta\\cos\\theta = \\displaystyle\\frac{-1}{4}$\n",
+        "\n",
+        "$\\sin\\theta\\cos\\theta = \\displaystyle\\frac{-1}{8}$\n",
+        "\n",
+        "(2)  \n",
+        "\n",
+        "$\\sin^3\\theta+\\cos^3\\theta = (\\sin\\theta + \\cos\\theta)(\\sin^2\\theta - \\sin\\theta\\cos\\theta + \\cos^2\\theta)$\n",
+        "\n",
+        "$\\qquad =  \\displaystyle\\frac{\\sqrt 3}{2} (\\sin^2\\theta - \\frac{-1}{8} + \\cos^2\\theta)$\n",
+        "\n",
+        "$\\qquad =  \\displaystyle\\frac{\\sqrt 3}{2} (1 + \\frac{1}{8})$\n",
+        "\n",
+        "$\\qquad =  \\displaystyle\\frac{9\\sqrt 3}{16}$\n",
+        "\n",
+        "(3)\n",
+        "\n",
+        "* $\\cos^3\\theta-\\sin^3\\theta$\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
