--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhhHZ0ZuRloMXW5zw+BWtp",
+      "authorship_tag": "ABX9TyOBhzx1EuIVauwVBDb63Gtj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -750,7 +750,20 @@
         "---\n",
         "三角関数の性質 p.174\n",
         "\n",
-        "$\\theta$ "
+        "$\\theta + 2n\\pi$ の三角関数\n",
+        "* $\\sin(\\theta + 2n\\pi) = \\sin\\theta$\n",
+        "* $\\cos(\\theta + 2n\\pi) = \\cos\\theta$\n",
+        "* $\\tan(\\theta + 2n\\pi) = \\tan\\theta$\n",
+        "\n",
+        "$-\\theta$ の三角関数\n",
+        "* $\\sin(-\\theta) = - \\sin\\theta$\n",
+        "* $\\cos(-\\theta) = \\cos\\theta$\n",
+        "* $\\tan(-\\theta) = - \\tan\\theta$\n",
+        "\n",
+        "$-\\theta$ の三角関数\n",
+        "* $\\sin(-\\theta) = - \\sin\\theta$\n",
+        "* $\\cos(-\\theta) = \\cos\\theta$\n",
+        "* $\\tan(-\\theta) = - \\tan\\theta$"
       ]
     }
   ]
