--- a/okiraku_sympy01.ipynb
+++ b/okiraku_sympy01.ipynb
@@ -6,7 +6,7 @@
       "name": "okiraku_sympy01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNFjaIkjK2fy9UHgsmxBohp",
+      "authorship_tag": "ABX9TyN4O3TxE3tUTfV4LyTWDJac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,24 @@
         "# メモ\n",
         "\n",
         "お気楽 sympy プログラミング超入門\n",
+        "\n",
+        "http://www.nct9.ne.jp/m_hiroi/light/python3.html#sympy_abc\n",
+        "\n",
+        "* Hello, SymPy!!\n",
+        "* SymPy の基本\n",
+        "* 多項式\n",
+        "* 微積分\n",
+        "* 集合\n",
+        "* 行列\n",
+        "* 線形代数\n",
+        "* 素数と約数\n",
+        "* 数列と級数\n",
+        "* 論理代数\n",
+        "* 等式と不等式\n",
+        "* 微分方程式\n",
+        "* いろいろな関数\n",
+        "* 特殊関数\n",
+        "* 関数のグラフ\n",
         "\n",
         "を読む。\n",
         "\n"
@@ -500,11 +518,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "d7vZwTbmpoRv",
-        "outputId": "8f9b7e7a-a278-455b-f92b-53dc137fae2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
-        }
+        },
+        "outputId": "8f9b7e7a-a278-455b-f92b-53dc137fae2c"
       },
       "source": [
         "from sympy import *\n",
@@ -527,7 +545,7 @@
         "display(x2)\n",
         "display(x3)\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
