--- a/okiraku_sympy01.ipynb
+++ b/okiraku_sympy01.ipynb
@@ -6,7 +6,7 @@
       "name": "okiraku_sympy01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOoEBDGned+GIXdRDcxOswN",
+      "authorship_tag": "ABX9TyNo/J9VvaOP63dKqCjh3CSz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -799,12 +799,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zJ4o5j-OUIkG",
-        "outputId": "527a2243-ff65-47fc-dc54-7ce4ab1e62c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 146
-        }
+        },
+        "id": "zJ4o5j-OUIkG",
+        "outputId": "527a2243-ff65-47fc-dc54-7ce4ab1e62c5"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -895,12 +895,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MAXi2kEVTbRl",
-        "outputId": "a5792bbb-2843-4486-e894-8af673080fbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
-        }
+        },
+        "id": "MAXi2kEVTbRl",
+        "outputId": "a5792bbb-2843-4486-e894-8af673080fbf"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -978,12 +978,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1nVQ7DwOVG8n",
-        "outputId": "765c8883-6cd8-4a3f-fee6-90eca951d25c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
-        }
+        },
+        "id": "1nVQ7DwOVG8n",
+        "outputId": "765c8883-6cd8-4a3f-fee6-90eca951d25c"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -1074,12 +1074,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XdRGycrTa4B0",
-        "outputId": "ab6053aa-e25d-4d58-cff3-5bc422d38e37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 82
-        }
+        },
+        "id": "XdRGycrTa4B0",
+        "outputId": "ab6053aa-e25d-4d58-cff3-5bc422d38e37"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -1158,12 +1158,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3o9Vw5MPcT0p",
-        "outputId": "f7a1abfe-4d73-4fee-f511-3d641306932f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 186
-        }
+        },
+        "id": "3o9Vw5MPcT0p",
+        "outputId": "f7a1abfe-4d73-4fee-f511-3d641306932f"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -1267,12 +1267,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "muyVDFL8cooY",
-        "outputId": "11d9fbfe-f6c8-4d30-9967-3d53b5725a80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
-        }
+        },
+        "id": "muyVDFL8cooY",
+        "outputId": "11d9fbfe-f6c8-4d30-9967-3d53b5725a80"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -1415,12 +1415,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5-lw2jpod86A",
-        "outputId": "97455ffc-2a4e-4ea0-bc88-329d8fa7575b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
-        }
+        },
+        "id": "5-lw2jpod86A",
+        "outputId": "97455ffc-2a4e-4ea0-bc88-329d8fa7575b"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -1559,6 +1559,215 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "p_TznxnletrO",
+        "outputId": "a7241273-c247-4e25-b453-c738a4f5b62a"
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "a = x**2\n",
+        "display(a)\n",
+        "display(a.subs(x, 10))\n",
+        "display(a.subs(x, 1.2345))\n",
+        "display(a.subs(x, y + z))\n",
+        "display(a.subs(x, sqrt(2)))\n",
+        "b = a.subs(x, y + z)\n",
+        "display(b)\n",
+        "display(b.subs({y: sqrt(2), z: sqrt(3)}))\n"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x^{2}$",
+            "text/plain": [
+              "x**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 100$",
+            "text/plain": [
+              "100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 1.52399025$",
+            "text/plain": [
+              "1.52399025000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(y + z\\right)^{2}$",
+            "text/plain": [
+              "(y + z)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 2$",
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(y + z\\right)^{2}$",
+            "text/plain": [
+              "(y + z)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(\\sqrt{2} + \\sqrt{3}\\right)^{2}$",
+            "text/plain": [
+              "(sqrt(2) + sqrt(3))**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TqOkQN5fnlDq",
+        "outputId": "d719723c-a1fa-4e5a-9dca-b18f819d959a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "display(pi.evalf())\n",
+        "display(N(pi, 50))\n",
+        "display(sqrt(2).evalf(50))\n",
+        "a = x**2\n",
+        "b = a.subs(x, y + z)\n",
+        "display(b)\n",
+        "display(b.subs({y: sqrt(2), z: sqrt(3)}).evalf())\n",
+        "display(b.subs({y: sqrt(2), z: sqrt(3)}).evalf(20))\n"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 3.14159265358979$",
+            "text/plain": [
+              "3.14159265358979"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 3.1415926535897932384626433832795028841971693993751$",
+            "text/plain": [
+              "3.1415926535897932384626433832795028841971693993751"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 1.4142135623730950488016887242096980785696718753769$",
+            "text/plain": [
+              "1.4142135623730950488016887242096980785696718753769"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(y + z\\right)^{2}$",
+            "text/plain": [
+              "(y + z)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 9.89897948556636$",
+            "text/plain": [
+              "9.89897948556636"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 9.8989794855663561964$",
+            "text/plain": [
+              "9.8989794855663561964"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hxKIJt9UWBhM"
@@ -1568,58 +1777,34 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "p_TznxnletrO"
+        "id": "4UNh4H3UoBJA"
       },
       "source": [
+        "# 多項式 polynomial\n",
+        "* 多項式の除算で商と余りを求めるには関数 `div()` を使う\n",
+        "* 有理式 (多項式の分数) の簡約化には関数 `cansel()` がある\n",
+        "* 関数 `apart()` は有理式を「部分分数」に分解する\n",
+        "* 部分分数とは、分母が因数分解されている有理式をいくつかの有理式に分解すること\n",
+        "* 次の条件を満たすとき、有理式 $g(x) / f(x)$ は簡単な形に分解できる\n",
+        "  * f(x) は 1 次式の積に因数分解できるような整式であること\n",
+        "  * g(x) は f(x) より次数が少ない整式であること\n",
         "\n",
-        "    >>> a = x**2\n",
-        "    >>> a\n",
-        "     2\n",
-        "    x\n",
-        "    >>> a.subs(x, 10)\n",
-        "    100\n",
-        "    >>> a.subs(x, 1.2345)\n",
-        "    1.52399025000000\n",
-        "    >>> a.subs(x, y + z)\n",
-        "           2\n",
-        "    (y + z)\n",
-        "    >>> a.subs(x, sqrt(2))\n",
-        "    2\n",
-        "    >>> b = a.subs(x, y + z)\n",
-        "    >>> b.subs({y: sqrt(2), z: sqrt(3)})\n",
-        "             2\n",
-        "    (√2 + √3)\n",
-        "    >>> pi.evalf()\n",
-        "    3.14159265358979\n",
-        "    >>> N(pi, 50)\n",
-        "    3.1415926535897932384626433832795028841971693993751\n",
-        "    >>> sqrt(2).evalf(50)\n",
-        "    1.4142135623730950488016887242096980785696718753769\n",
-        "    >>> b.subs({y: sqrt(2), z: sqrt(3)}).evalf()\n",
-        "    9.89897948556636\n",
-        "    >>> b.subs({y: sqrt(2), z: sqrt(3)}).evalf(20)\n",
-        "    9.8989794855663561964\n",
+        "  ``` {.item}\n",
+        "  g(x) / f(x) = b1 / (x - a1) + b2 / (x - a2) + ... + bn / (x - an)\n",
+        "  ```\n",
         "\n",
-        "#### ●多項式 {#abc02}\n",
-        "\n",
-        "*   多項式の除算で商と余りを求めるには関数 div() を使う\n",
-        "*   有理式 (多項式の分数) の簡約化には関数 cansel() がある\n",
-        "*   関数 apart() は有理式を「部分分数」に分解する\n",
-        "*   部分分数は、分母が因数分解されている有理式をいくつかの有理式に分解すること\n",
-        "*   次の条件を満たすとき、有理式 g(x) / f(x) は簡単な形に分解できる\n",
-        "\n",
-        "    -   f(x) は 1 次式の積に因数分解できるような整式であること\n",
-        "    -   g(x) は f(x) より次数が少ない整式であること\n",
-        "\n",
-        "    ``` {.item}\n",
-        "    g(x) / f(x) = b1 / (x - a1) + b2 / (x - a2) + ... + bn / (x - an)\n",
-        "    ```\n",
-        "\n",
-        "*   関数 collect() は指定した変数で式をまとめる\n",
-        "*   そのあと、メソッド coeff()\n",
-        "    で指定した次数の係数を取り出すことができる\n",
+        "* 関数 `collect()` は指定した変数で式をまとめる\n",
+        "* そのあと、メソッド `coeff()` で指定した次数の係数を取り出すことができる\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h8vGKstUouC8"
+      },
+      "source": [
         "\n",
         "<!-- -->\n",
         "\n",
