--- a/chartmath303derivative2.ipynb
+++ b/chartmath303derivative2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chartmath303derivative2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNBSNhZruQJIVqmADOcc6+L",
+      "authorship_tag": "ABX9TyODrqOj/KFg09e/LvLLNpEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,32 @@
       },
       "source": [
         "基本例題 46 (2) p.81\n",
+        "\n",
+        "関数 $y = \\;\\mid x-a\\;\\mid\\;$ について、$x=a$ における連続性、微分可能性を調べる。\n",
+        "\n",
+        "解:\n",
+        "\n",
+        "$f(x) = \\;\\mid x-a\\;\\mid\\;$ と置くと、\n",
+        "\n",
+        "$\\qquad \\displaystyle \\lim_{x \\to a} f(x) = \\lim_{x \\to a} \\mid x-a\\mid = 0 = f(a)$\n",
+        "\n",
+        "よって、$f(a)$ が極限 $\\displaystyle \\lim_{x \\to a} f(x)$と同じなので連続である。\n",
+        "\n",
+        "次に $h \\to 0$ と $h \\to -0$ での微分係数を調べると極限値が $\\pm 1$ となり異なるので微分可能ではない。\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kBdugJf_TF9w"
+      },
+      "source": [
+        "---\n",
+        "導関数の性質\n",
+        "\n",
+        "$k,l$ を定数とする。\n",
         "\n"
       ]
     }
