--- a/chartmath303derivative2.ipynb
+++ b/chartmath303derivative2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chartmath303derivative2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODrqOj/KFg09e/LvLLNpEw",
+      "authorship_tag": "ABX9TyPemy2H/B4Q8hnj8Zt6nBLM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,27 @@
         "導関数の性質\n",
         "\n",
         "$k,l$ を定数とする。\n",
+        "* 定数倍 $\\quad$ $(ku)' = ku'$\n",
+        "* 和 $\\quad (u+v)' = u' + v'$\n",
+        "* $(ku+lv)' = ku' +lv' \\quad$ 特に $\\quad (u-v)'=u'-v'$\n",
+        "\n",
+        "積の導関数\n",
+        "* $(uv)' = u'v + uv'$\n",
+        "* $n$ が自然数の時 $\\quad (x^n)' = nx^{n-1}$\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yV0xAvNsXmv9"
+      },
+      "source": [
+        "---\n",
+        "商の導関数\n",
+        "* $\\displaystyle \\left(\\frac u v\\right)'= \\frac{u'v - uv'}{v^2}\\quad$ 特に $\\quad \\displaystyle \\left(\\frac 1 v \\right) = - \\frac {v'}{v^2}$ \n",
+        "\n",
+        "$n$"
       ]
     }
   ]
