--- a/chartmath303derivative2.ipynb
+++ b/chartmath303derivative2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chartmath303derivative2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPemy2H/B4Q8hnj8Zt6nBLM",
+      "authorship_tag": "ABX9TyP/55+DPS0FwMqsEH3a9NxO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,10 +140,18 @@
       },
       "source": [
         "---\n",
-        "商の導関数\n",
+        "商の導関数 p.83\n",
+        "\n",
         "* $\\displaystyle \\left(\\frac u v\\right)'= \\frac{u'v - uv'}{v^2}\\quad$ 特に $\\quad \\displaystyle \\left(\\frac 1 v \\right) = - \\frac {v'}{v^2}$ \n",
         "\n",
-        "$n$"
+        "$n$ が整数の時、$\\quad (x^n)' = nx^{n-1}$\n",
+        "\n",
+        "$n$ が自然数の時は二項定理もしくは帰納法で証明する。\n",
+        "\n",
+        "$n$ が負の時、$n=-m$ と置いて、\n",
+        "\n",
+        "$(x^n)' = (x^{-m})' = \\left(\\frac 1 {x^m}\\right)'= -\\frac{(x^m)'}{(x^m)^2} = - \\frac {mx^{m-1}}{x^{2m}} = -mx^{-m-1} = nx^{n-1}$\n",
+        "\n"
       ]
     }
   ]
